force-app/main/default/objects/Visit__c/fields/check_out_comments__c.field-meta.xml
<CustomField>
    <fullName>check_out_comments__c</fullName>
    <label>check out comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Product-related</fullName><default>false</default><label>Product-related</label></value>
            <value><fullName>DB-related</fullName><default>false</default><label>DB-related</label></value>
            <value><fullName>Competitor-related</fullName><default>false</default><label>Competitor-related</label></value>
            <value><fullName>Outlet-related</fullName><default>false</default><label>Outlet-related</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>