force-app/main/default/objects/Visit__c/fields/Lines_No__c.field-meta.xml
<CustomField>
    <fullName>Lines_No__c</fullName>
    <label>Lines No.</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>