force-app/main/default/objects/Visit__c/fields/Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Order_Qty__c</fullName>
    <label>Order Qty (Std Unit)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>